fix header not covering screen on scroll

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -152,7 +152,7 @@ body {
 
 /* || user page - post */
 .header {
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   z-index: 100;
